# log-library

./: CMakeLists.txt  README.md  logger.h
tests/: CMakeLists.txt  file_sink.cpp  simple.cpp  simple_streams.cpp  user_literals.cpp
